--- a/deeprl_hw1_tex/10703_hw1.tex
+++ b/deeprl_hw1_tex/10703_hw1.tex
@@ -446,7 +446,7 @@ If we consider that our episodes contain only 5 steps, starting points in the bl
 
   \textbf{Solution:}
 
-  As explained in the previous item, 
+  As explained in the previous item, trajectories from initial states in the blue zone will never achieve the coffee pot. Therefore, their values will be -5 (because we have a reward of -1 for each time step that passes until the end of the 5 episodes). Also, for points inside the green zone both policies yield the same result. Knowing this, $V_{\pi a}=V_{\pi b}$, for both both in the green and blue zones.
 
 \end{enumerate}
 
